funções de adicionar e deletar inseridos

--- a/index.html
+++ b/index.html
@@ -11,19 +11,9 @@
     <div class="container">
             <input class="input-task" type="text" placeholder="Digite sua tarefa aqui...">
             <button class="button-add-task" >Adicionar</button>
-        <ul class="list-tasks" >
-            <li class="task" >
-                <img class="btn-check" src="./img/checked.png" alt="checked">
-                <p>Exemplo de tarefa adicionada</p>
-                <img class="btn-done" src="./img/cancel.png" alt="cancel">
-            </li>
-
-            <li class="task" >
-                <img src="./img/checked.png" alt="checked">
-                <p>Exemplo de tarefa adicionada</p>
-                <img src="./img/cancel.png" alt="cancel">
-            </li>
+        <ul class="list-tasks">
         </ul>
     </div>
 </body>
+<script src="./scripts.js" ></script>
 </html>
